--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <mybatis.version>3.1.1</mybatis.version>
         <mybatis-spring.version>1.1.0</mybatis-spring.version>
         <mysql.version>5.1.36</mysql.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencies>
