使用立峰数据库

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,8 +1,8 @@
 database.driverClassName=com.mysql.jdbc.Driver
 
-database.dbPrint.url=jdbc:mysql://localhost:3306/printer_db?autoReconnect=true&useUnicode=true&characterEncoding=utf-8
-database.dbPrint.username=printeradmin
-database.dbPrint.password=tMs614006
+database.dbPrint.url=jdbc:mysql://103.238.224.14:3306/printer_db?autoReconnect=true&useUnicode=true&characterEncoding=utf-8
+database.dbPrint.username=lbpuprvl
+database.dbPrint.password=123456
 
 pool.initialPoolSize=8
 pool.minPoolSize=8
